--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: kuahitz のコード置き場
 # if it's an external image, update below for true
 # better with square images
 external-image: false
-picture: assets/images/profile.png
+picture: assets/images/profile.jpg
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
@@ -57,7 +57,7 @@ authors:
         name: kuahitz
         bio: Ruby, JavaScript, C, Python
         external-image: false
-        picture: assets/images/profile.png
+        picture: assets/images/profile.jpg
         twitter: kuahitz
 
 # do you want a larger site? change the option below
